# NVI

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-appimage.sh  build.sh
.github/workflows/: release.yml
data/: com.lordnikon.nvidia-driver-installer.policy  com.lordnikon.nvidia-driver-installer.service  io.github.labj1987.NVI.appdata.xml  io.github.labj1987.NVI.policy  nvidia-driver-installer.appdata.xml  nvidia-driver-installer.desktop
debian/: control  postinst
scripts/: privileged-install.sh
src/: com.lordnikon.nvidia-driver-installer.appdata.xml  download.rs  install.rs  main.rs  system.rs  ui.rs  versions.rs
